# audio_service

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3dcfac93842b_add_user_model.py  86c1e5625437_initial_migration_with_tasks.py  b8c522ca6428_update_user_model.py  d732f0d004c0_initial_migration.py
src/app/: main.py
src/app/api/v1/: auth.py  task_routers.py
src/app/core/: config.py  security.py
src/app/crud/: tasks.py  users.py
src/app/db/: session.py
src/app/db/models/: tasks.py  users.py
src/app/schemas/: tasks.py  users.py
src/app/services/: audio.py
src/app/utils/: common.py
src/tests/: test_auth.py  test_tasks.py
